# randomOpenGLstuff

./: README.md
fastLearningOpengl/: .gitignore  CMakeLists.txt  EBO.cpp  EBO.h  ShaderClass.cpp  ShaderClass.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  app  glad.c  imgui.ini  main.cpp  temp.cpp
fastLearningOpengl/app.dSYM/Contents/Resources/DWARF/: app
fastLearningOpengl/app.dSYM/Contents/Resources/Relocations/aarch64/: app.yml
fastLearningOpengl/dependencies/include/glad/: glad.h
fastLearningOpengl/res/Shaders/: Basic.shader  Batch.shader  BatchColor.shader  BatchColor3D.shader  default.vert
fastLearningOpengl/res/shaders/: FragmentShader.shader
fastLearningOpengl/src/: Application.cpp  ElementIndexBuffer.cpp  ElementIndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp
fastLearningOpengl/src/tests/: Test.cpp  Test.h  TestBatching.cpp  TestBatching.h  TestBatchingDynamic.cpp  TestBatchingDynamic.h  TestBatchingDynamic3D.cpp  TestBatchingDynamic3D.h  TestCamera.cpp  TestCamera.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
